test/TestPhases/parser/valid/extensions.blc
module

struct Class
    var x:int32
extension
    function method(this: Class) 
        this.x = 0
    end
end
